fix: change logo color for better readability

--- a/apps/ng-apps-resume/src/app/ui/header-title/header-title.component.scss
+++ b/apps/ng-apps-resume/src/app/ui/header-title/header-title.component.scss
@@ -3,5 +3,4 @@
     @apply block;
     @apply select-none;
     @apply text-3xl text-nowrap;
-    @apply text-[var(--app-header-title-text-color)];
 }
