--- a/apps/ng-apps-resume/src/styles.scss
+++ b/apps/ng-apps-resume/src/styles.scss
@@ -71,7 +71,7 @@
     --app-header-container-color: color-mix(in oklab, #0f002e 65%, transparent);
     --app-header-container-line-color: #4a00de; // almost indigo-700
 
-    --app-header-title-text-color: #c6d2ff; // 66baff
+    --app-header-title-line-color: #4a00de; // almost indigo-700
 
     --app-nav-fragments-color: #fff;
     --app-nav-fragments-hover-color: #fff;
